upd: スクリプトを停止できるようにした（邪魔なので）

--- a/assets/default_popup.html
+++ b/assets/default_popup.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AdAttack</title>
+  <script src="scripts/popup.js" defer></script>
 </head>
 <body>
   <h1>AdAttack</h1>
   <button>Start</button>
-  <button>Stop</button>
+  <button id="stopBtn">Stop</button>
 </body>
 </html>
