upd: オンオフ切り替え可能にした

--- a/assets/default_popup.html
+++ b/assets/default_popup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>AdAttack</h1>
-  <button>Start</button>
+  <button id="startBtn">Start</button>
   <button id="stopBtn">Stop</button>
 </body>
 </html>
